--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,14 +37,34 @@ jobs:
       #     version: 9
       # - uses: oven-sh/setup-bun@v1 # 如果使用 Bun，请取消注释
       - name: Setup Node
-        uses: actions/setup-node@v6
+        uses: actions/setup-node@v4  # 降级到 v4 避免警告
         with:
           node-version: 20
-          cache: npm # 或 pnpm / yarn
+          # 移除 cache 参数或使用特定缓存方式
+      - name: Debug - Check files
+        run: |
+          echo "=== Current directory structure ==="
+          ls -la
+          echo "=== Checking for lock files ==="
+          ls -la | grep -E "package-lock|yarn.lock|pnpm-lock"
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Install dependencies
-        run: npm ci # 或 pnpm install / yarn install / bun install
+        run: |
+          # 如果没有 lock 文件，使用 npm install 而不是 npm ci
+          if [ -f "package-lock.json" ]; then
+            echo "Found package-lock.json, using npm ci"
+            npm ci
+          elif [ -f "yarn.lock" ]; then
+            echo "Found yarn.lock, using yarn install"
+            yarn install --frozen-lockfile
+          elif [ -f "pnpm-lock.yaml" ]; then
+            echo "Found pnpm-lock.yaml, using pnpm install"
+            pnpm install --frozen-lockfile
+          else
+            echo "No lock file found, using npm install"
+            npm install
+          fi
       - name: Build with VitePress
         run: npm run docs:build # 或 pnpm docs:build / yarn docs:build / bun run docs:build
       - name: Upload artifact
