--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,41 +32,29 @@ jobs:
         uses: actions/checkout@v5
         with:
           fetch-depth: 0 # 如果未启用 lastUpdated，则不需要
-      # - uses: pnpm/action-setup@v4 # 如果使用 pnpm，请取消此区域注释
-      #   with:
-      #     version: 9
-      # - uses: oven-sh/setup-bun@v1 # 如果使用 Bun，请取消注释
+      
+      # 第一步：安装 pnpm（因为你使用的是 pnpm）
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+          run_install: false
+      
       - name: Setup Node
-        uses: actions/setup-node@v4  # 降级到 v4 避免警告
+        uses: actions/setup-node@v4
         with:
           node-version: 20
-          # 移除 cache 参数或使用特定缓存方式
-      - name: Debug - Check files
-        run: |
-          echo "=== Current directory structure ==="
-          ls -la
-          echo "=== Checking for lock files ==="
-          ls -la | grep -E "package-lock|yarn.lock|pnpm-lock"
+          cache: 'pnpm'  # 使用 pnpm 缓存
+      
       - name: Setup Pages
         uses: actions/configure-pages@v4
+      
       - name: Install dependencies
-        run: |
-          # 如果没有 lock 文件，使用 npm install 而不是 npm ci
-          if [ -f "package-lock.json" ]; then
-            echo "Found package-lock.json, using npm ci"
-            npm ci
-          elif [ -f "yarn.lock" ]; then
-            echo "Found yarn.lock, using yarn install"
-            yarn install --frozen-lockfile
-          elif [ -f "pnpm-lock.yaml" ]; then
-            echo "Found pnpm-lock.yaml, using pnpm install"
-            pnpm install --frozen-lockfile
-          else
-            echo "No lock file found, using npm install"
-            npm install
-          fi
+        run: pnpm install --frozen-lockfile
+      
       - name: Build with VitePress
-        run: npm run docs:build # 或 pnpm docs:build / yarn docs:build / bun run docs:build
+        run: pnpm run docs:build
+      
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
